pathmind-webapp/frontend/styles/views/experiment-view.css
.experiment-view .page-content {
    flex: 1 0 auto;
}

.experiment-view .view-section > vaadin-horizontal-layout:first-child > vaadin-vertical-layout:first-child {
    flex: 1 0 auto;
}

.experiment-view .section-title-label {
    flex: 1 0 auto;
    line-height: 1;
    white-space: nowrap;
}

.experiment-view .bold-label {
    /* same as .panel-title-label but since this panel is reused on Experiment &
       New Experiment view, we're going to keep it as .bold-label for now */
    box-sizing: border-box;
    width: 100%;
    font-size: var(--lumo-font-size-s);
    font-weight: normal;
    color: var(--lumo-secondary-text-color);
    line-height: 1;
    background: var(--pm-app-bg-color);
    padding: var(--lumo-space-xs);
    border-bottom: 1px solid var(--pm-grey-color-lightest);
}

.experiment-view .experiment-header tag-label {
    margin: var(--lumo-space-xs) 0 var(--lumo-space-xs) var(--lumo-space-m);
}

.experiment-view .experiment-header tag-label:not([hidden]):first-of-type {
    margin-left: var(--lumo-space-m);
}

.experiment-view .simulation-metrics-panel-header {
    background: var(--pm-app-bg-color);
    padding-right: var(--lumo-space-xs);
}

.experiment-view .simulation-metrics-panel-header iron-icon {
    --iron-icon-width: var(--lumo-font-size-s);
    --iron-icon-height: var(--lumo-font-size-s);
}

.experiment-view .simulation-metrics-panel-header .helper-icon:hover {
    color: var(--pm-secondary-text-color);
}

.experiment-view tag-label {
    margin: var(--lumo-space-xs) 0;
}

.experiment-view .view-section {
    box-sizing: border-box;
    width: 100%;
    min-width: auto;
    background: white;
    border-radius: 0;
    padding: 0;
}

.experiment-view .view-section > vaadin-vertical-layout {
    flex: 0 0 100%;
    overflow: visible;
}

.experiment-view.comparison-mode .view-section > vaadin-vertical-layout {
    flex: 1 1 50%;
}

.experiment-view .experiment-header {
    position: relative;
    justify-content: space-between;
}

.experiment-view .middle-panel {
    flex: 1 1 auto;
    height: auto !important;
}

.experiment-view .middle-panel > vaadin-split-layout > vaadin-vertical-layout:first-child,
.experiment-view .comparison-panel > vaadin-split-layout > vaadin-vertical-layout:first-child {
    max-height: 27rem;
}

.experiment-view .middle-panel > vaadin-split-layout > vaadin-vertical-layout:last-child {
    border-left: 1px solid var(--pm-grey-color-lightest);
}

.experiment-view .middle-panel > vaadin-vertical-layout:last-child {
    flex: 1 1 auto;
    width: 50% !important;
    border-left: 1px solid var(--pm-grey-color-lightest);
    overflow: hidden;
}

.experiment-view .simulation-metrics-table-wrapper {
    box-sizing: border-box;
    flex: 1;
    width: 100%;
    font-size: var(--lumo-font-size-xs);
    line-height: 1.8;
    padding: var(--lumo-space-xs);
    padding-top: 0;
    overflow: auto;
}

.experiment-view .reward-variables-table {
    font-size: var(--lumo-font-size-xs);
}

.experiment-view .reward-variables-table.compact .header-row {
    display: block;
    justify-content: flex-start;
    line-height: 2rem;
    padding: 0;
}

.experiment-view .reward-variables-table .header-row span:last-child {
    display: none;
}

.experiment-view .simulation-metrics-table-wrapper .header {
    display: flex;
    justify-content: flex-end;
    position: sticky;
    width: 100%;
    top: 0;
    color: var(--pm-secondary-text-color);
    background-color: white;
    z-index: 1;
}

.experiment-view .metrics-wrapper .header span {
    justify-content: flex-end;
}

.experiment-view .reward-variables-table .goal-display-span {
    display: none;
}
.experiment-view .reward-variable-name-field {
    height: 1.75rem;
    border-radius: 3px;
    box-shadow: none;
}

.experiment-view .reward-variable-name {
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    cursor: pointer;
}

.experiment-view .reward-variables-table.disable-selection .reward-variable-name:not([chosen]) {
    background-color: var(--pm-grey-color-lightest);
    border-color: var(--pm-grey-color-lightest);
    cursor: default;
}

.experiment-view .metrics-wrapper span {
    display: flex;
    align-items: center;
    flex: 0 0 auto;
    height: 2rem;
    line-height: 1;
    margin-left: var(--lumo-space-s);
}

.experiment-view .metrics-wrapper,
.experiment-view .sparklines-wrapper,
.experiment-view .histograms-wrapper {
    flex: 1 0 0;
    line-height: 2rem;
}

.experiment-view .sparklines-wrapper .sparkline,
.experiment-view .histograms-wrapper .histogram {
    position: relative;
    width: 100px;
    height: 2rem !important;
    padding: var(--lumo-space-xxs) 0;
    margin-left: var(--lumo-space-s);
}

.experiment-view .sparklines-wrapper .sparkline data-chart,
.experiment-view .histograms-wrapper .histogram histogram-chart {
    width: 100%;
    height: 100%;
}

.experiment-view .sparklines-wrapper .sparkline vaadin-button {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    height: 1.32rem;
    line-height: 1.32rem;
    font-size: var(--lumo-font-size-s);
    padding: 0 var(--lumo-space-xs);
    transform: translate(-50%, -50%);
    margin: 0;
}

.experiment-view .sparklines-wrapper .sparkline:hover vaadin-button {
    display: block;
}

.experiment-view .metrics-wrapper {
    align-items: flex-end;
}

.experiment-view code-viewer {
    height: calc(100% - 1.68rem);
    border: none;
    border-radius: 0;
}

.experiment-view.comparison-mode code-viewer {
    height: 16rem;
}

.experiment-view .observations-panel {
    max-height: 27rem;
    font-size: var(--lumo-font-size-s);
    padding: 0;
    border: none;
    border-radius: 0;
}

.experiment-view .observations-panel .observations-table {
    padding-top: 0;
    overflow: auto;
}

.experiment-view .observations-panel .observations-table > vaadin-checkbox {
    font-weight: normal;
    color: var(--lumo-body-text-color);
}
/* ... */

